--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -28,6 +28,10 @@ vars:
     sh: make export-SOUS_TC_PACKAGES
   HARD_CODE: github.com/opentable/sous/cli github.com/opentable/sous/cli/tests github.com/opentable/sous/config github.com/opentable/sous/ext/docker github.com/opentable/sous/ext/git github.com/opentable/sous/ext/github github.com/opentable/sous/ext/otpl github.com/opentable/sous/ext/singularity github.com/opentable/sous/ext/storage github.com/opentable/sous/graph github.com/opentable/sous/lib github.com/opentable/sous/server github.com/opentable/sous/test github.com/opentable/sous/test/smoke github.com/opentable/sous/util/blueprints/cmap github.com/opentable/sous/util/cmdr github.com/opentable/sous/util/configloader github.com/opentable/sous/util/docker_registry github.com/opentable/sous/util/firsterr github.com/opentable/sous/util/logging github.com/opentable/sous/util/logging/messages github.com/opentable/sous/util/restful github.com/opentable/sous/util/restful/restfultest github.com/opentable/sous/util/shell github.com/opentable/sous/util/shelltest github.com/opentable/sous/util/sqlgen github.com/opentable/sous/util/validator github.com/opentable/sous/util/whitespace github.com/opentable/sous/util/yaml
   UNIT_TEST_RUN: docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v $PWD:/go/src/github.com/opentable/sous -w /go/src/github.com/opentable/sous --privileged=true golang:1.10 go test -v -race
+  INTEGRATION_TEST_RUN: docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v $PWD:/go/src/github.com/opentable/sous -w /go/src/github.com/opentable/sous --privileged=true golang:1.10 go test -v ./integration --tags=integration
+  QA_DESC_FILE: qa_desc.json
+  SOUS_QA_DESC:
+    sh: echo "$PWD/{{.QA_DESC_FILE}}"
 
 tasks:
 
@@ -54,6 +58,9 @@ tasks:
       - echo "SOUS_TC_PACKAGES = {{.SOUS_TC_PACKAGES}}"
       - echo "HARD_CODE = {{.HARD_CODE}}"
       - echo "UNIT_TEST_RUN = {{.UNIT_TEST_RUN}}"
+      - echo "QA_DESC_FILE = {{.QA_DESC_FILE}}"
+      - echo "SOUS_QA_DESC = {{.SOUS_QA_DESC}}"
+      - echo "INTEGRATION_TEST_RUN = {{.INTEGRATION_TEST_RUN}}"
     silent: true
 
   install:
@@ -89,6 +96,12 @@ tasks:
     cmds:
       - make clean-running-containers
 
+  sous-qa-setup:
+    desc: setup for integration runs
+    cmds:
+      - rm -f {{.SOUS_QA_DESC}}
+      - ./bin/sous_qa_tc_setup --compose-dir ./integration/test-registry/ --out-path={{.SOUS_QA_DESC}}
+
   containers:
     desc: runs docker-compose up on test-registry folder, also cleans containers first
     deps: [clean-containers]
@@ -99,7 +112,9 @@ tasks:
   integration-tc:
     desc: runs test-integration from make file
     cmds:
-      - make test-integration
+      - task: containers
+      - task: sous-qa-setup
+      - "{{.INTEGRATION_TEST_RUN}} | ./bin/gotest-to-teamcity"
 
   integration:
     desc: cleans, docker-compose, then runs make test-integration
