explicit move to integration/test-registry

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -112,7 +112,9 @@ tasks:
   integration-tc:
     desc: runs test-integration from make file
     cmds:
-      - task: containers
+      - cd ./integration/test-registry
+      - docker-compose up -d
+      - cd ../..
       - task: sous-qa-setup
       - "{{.INTEGRATION_TEST_RUN}} | ./bin/gotest-to-teamcity"
 
