--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -112,11 +112,7 @@ tasks:
   integration-tc:
     desc: runs test-integration from make file
     cmds:
-      - cd ./integration/test-registry
-      - pwd
-      - ls
-      - docker-compose up -d
-      - cd ../..
+      - cd ./integration/test-registry && docker-compose up -d
       - task: sous-qa-setup
       - "{{.INTEGRATION_TEST_RUN}} | ./bin/gotest-to-teamcity"
 
