--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -112,6 +112,7 @@ tasks:
   integration-tc:
     desc: runs test-integration from make file
     cmds:
+      - task: sous-qa-setup
       - cd ./integration/test-registry && docker-compose up -d
       - task: sous-qa-setup
       - "{{.INTEGRATION_TEST_RUN}} | ./bin/gotest-to-teamcity"
