--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -31,7 +31,7 @@ vars:
   QA_DESC_FILE: qa_desc.json
   SOUS_QA_DESC:
     sh: echo "$PWD/{{.QA_DESC_FILE}}"
-  INTEGRATION_TEST_RUN: docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -e "SOUS_QA_DESC=/go/src/github.com/opentable/sous/{{.QA_DESC_FILE}}" -v $PWD:/go/src/github.com/opentable/sous -w /go/src/github.com/opentable/sous --privileged=true golang:1.10 go test -v ./integration --tags=integration
+  INTEGRATION_TEST_RUN: docker run --rm --net=host -v /var/run/docker.sock:/var/run/docker.sock -e "SOUS_QA_DESC=/go/src/github.com/opentable/sous/{{.QA_DESC_FILE}}" -v $PWD:/go/src/github.com/opentable/sous -w /go/src/github.com/opentable/sous --privileged=true golang:1.10 go test -v ./integration --tags=integration
 
 tasks:
 
