--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 sudo: required
+addons:
+  apt:
+    packages:
+      - docker-ce
 services:
 - docker
 language: go
@@ -7,7 +11,6 @@ go:
 before_install:
 - docker version
 - bin/ci-setup
-
 install:
 # - sudo apt-get install python3-proselint
 - bundle
