--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,9 @@ env:
     - TEST_COMMAND="GO_TEST_RUN=TestSmoke/git/simple make test-smoke"
     - TEST_COMMAND="GO_TEST_RUN=TestSmoke/git/split make test-smoke"
     - TEST_COMMAND="GO_TEST_RUN=TestBugs/git/simple make test-smoke"
+    - TEST_COMMAND="GO_TEST_RUN=TestBugs/git/split make test-smoke"
+    - TEST_COMMAND="GO_TEST_RUN=TestErrors/git/simple make test-smoke"
+    - TEST_COMMAND="GO_TEST_RUN=TestErrors/git/split make test-smoke"
 before_deploy: git clean -fd && git reset --hard HEAD && go get github.com/karalabe/xgo
   && make semvertagchk && make tag-in-changelog-check && bundle exec make -j2 release
 jobs:
